# innowise_laboratory

lecture_1/: main.py  pyproject.toml
lecture_2/: main.py
lecture_3/: main.py
lecture_4/: school.db  school.sql
lecture_5/: pyproject.toml
lecture_5/book_api/: books.db  books.db-journal  main.py
lecture_6/: Dockerfile  main.py  requirements.txt
